# TestWorks

./: .gitignore  README.md
TestWorkConsole/: AssemblyInfo.cpp  CMakeLists.txt  CmdCall.cpp  CmdCall.h  Learning.cpp  TestWorkConsole.cpp  TestWorkConsole.sln  TestWorkConsole.vcxproj  TestWorkConsole.vcxproj.filters  learning.h  re_nysn.txt
TestWorkConsole/src/: CmdCall.cpp  Learning.cpp  TestWorkConsole.cpp
TestWorkConsole/x64/Debug/: TestWorkConsole.ilk  TestWorkConsole.vcxprojAssemblyReference.cache  learning.obj.enc  re_central_london.txt  re_nyos.txt  re_nysn.txt  svt_rbst_a.txt  vc141.idb
TestWorkConsole/x64/Debug/TestWorkConsole.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TestWorkConsole.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
TestWorkConsole/x64/Release/: TestWorkConsole.vcxprojAssemblyReference.cache
TestWorkConsole/x64/Release/TestWorkConsole.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TestWorkConsole.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
TestWork_scraper/: .re_scrape.py.un~  re_nys.txt  re_scrape.py  re_scrape.py~
